--- a/rudder-web/src/main/webapp/secure/administration/policyServerManagement.html
+++ b/rudder-web/src/main/webapp/secure/administration/policyServerManagement.html
@@ -368,7 +368,7 @@
             <p>Configure the default state and policy mode for nodes when they are accepted within Rudder.</p>
             <p><b>State</b> may be used to classify nodes, in search and groups, and some states have also an impact on the policies generation for the node.
             </p>
-            <p>You may read the <a href="/rudder-doc/node-lifecycle.html" target="_blank">node lifecycle documentation</a> for more information.</p>
+            <p>You may read the <a href="/rudder-doc/reference/current/usage/advanced_node_management.html#node-lifecycle" target="_blank">node lifecycle documentation</a> for more information.</p>
           </div>
           <div class="pull-left">
             <form class="lift:form.ajax">
