Fixes #13512: Imperfect alignement of radio button

--- a/rudder-web/src/main/webapp/secure/administration/policyServerManagement.html
+++ b/rudder-web/src/main/webapp/secure/administration/policyServerManagement.html
@@ -143,7 +143,7 @@
 	          <ul>
 	            <li class="rudder-form">
 	              <div class="input-group">
-	                <label class="input-group-addon" for="denyBadClocks">
+	                <label class="input-group-addon" for="relaySyncPromises">
 	                  <input id="relaySyncPromises" type="checkbox">
 	                  <label for="relaySyncPromises" class="label-radio">
 	                    <span class="ion ion-checkmark-round"></span>
