Fixes #8622: Bad looking wheel on black backround

--- a/rudder-web/src/main/webapp/templates-hidden/lazy-load-spinner.html
+++ b/rudder-web/src/main/webapp/templates-hidden/lazy-load-spinner.html
@@ -1,1 +1,1 @@
-<div><img data-lift="with-cached-resource" src="/images/ajax-loader.gif" alt="Loading"/></div>
+<div><img data-lift="with-cached-resource" src="/images/ajax-loader.svg" alt="Loading" class="svg-loader"/></div>
