--- a/rudder-web/src/main/webapp/secure/nodeManager/searchNodes.html
+++ b/rudder-web/src/main/webapp/secure/nodeManager/searchNodes.html
@@ -11,7 +11,7 @@
 <div class="portlet">
   <div class="portlet-header page-title">Nodes</div>
   <div class="portlet-content">
-    <div class="intro">
+    <div class="intro query-search-message">
       <div>
         Make a query base search and display node details
       </div>
