--- a/rudder-web/src/main/webapp/secure/utilities/eventLogs.html
+++ b/rudder-web/src/main/webapp/secure/utilities/eventLogs.html
@@ -16,7 +16,6 @@
     <div class="inner-portlet">
       <div class="page-title">Event Logs</div>
       <div class="portlet-content">
-        <hr class="spacer"/>
 
         <div class="lift:administration.EventLogsViewer.display"></div>
 
@@ -26,7 +25,7 @@
           <input type="text" class="pickStartInput form-control input-xs"/>
           and
           <input type="text" class="pickEndInput form-control input-xs"/>
-          <button id="filterLogsButton" type="button" class="btn btn-default btn-sm pickDatesButton" title="Get Events">Get events</button>
+          <button id="filterLogsButton" type="button" class="btn btn-default btn-sm">Get events</button>
         </div>
 
         <table id="eventLogsGrid" class="display" cellspacing="0"></table>
