--- a/rudder-web/src/main/webapp/templates-hidden/node_logs_tabs.html
+++ b/rudder-web/src/main/webapp/templates-hidden/node_logs_tabs.html
@@ -6,7 +6,7 @@
     <input type="text" class="pickStartInput form-control input-xs"/>
      and
     <input type="text" class="pickEndInput form-control input-xs"/>
-    <button id="filterLogsButton" type="button" class="btn btn-default btn-sm pickDatesButton" title="Get logs">Get logs</button>
+    <button id="filterLogsButton" type="button" class="btn btn-default btn-sm" >Get logs</button>
   </div>
   <table id="logsGrid" cellspacing="0"></table>
 </logs-content>
