--- a/builder/index.html
+++ b/builder/index.html
@@ -297,26 +297,32 @@
                     </div>
                    
                     <ul id="methods" class="list-unstyled" dnd-list="selectedTechnique.method_calls" dnd-drop="dropCallback(item, index, type);" >
-                        <li ng-click="selectMethod(method_call)" ng-repeat="method_call in selectedTechnique.method_calls" class="panel-margin-top btn btn-block btn-default btn-method" ng-class="{'active': isSelectedMethod(method_call)}" dnd-draggable="method_call" dnd-effect-allowed="ove" dnd-moved="selectedTechnique.method_calls.splice($index,1)">
+                        <li ng-click="selectMethod(method_call)" ng-repeat="method_call in selectedTechnique.method_calls" class="panel-margin-top btn btn-block btn-default btn-method" ng-class="{'active': isSelectedMethod(method_call)}" >
                           <div class="input-group">
-                            <span class="input-group-addon cursorMove"><b>:::</b></span>
-                            <div class="panel-heading" style="overflow:hidden">
-                                <h4 class="panel-title">
-                                <div class="method-settings">
-                                    <button type="button" ng-click="moveDown($event,$index);" class="icon-margin method-actions" ng-class="{disabled : $index === 0}">
-                                      <i class="glyphicon glyphicon-circle-arrow-up"></i>
-                                    </button>
-                                    <button type="button" ng-click="moveUp($event,$index);" class="icon-margin method-actions" ng-class="{disabled : $index === selectedTechnique.method_calls.length - 1}">
-                                      <i class="glyphicon glyphicon-circle-arrow-down"></i>
-                                    </button>
-                                    <button type="button" ng-click="removeMethod($index);$event.stopPropagation();" class="icon-margin  method-actions">
-                                      <i class="glyphicon glyphicon-remove-sign icon-delete"></i>
-                                    </button>
-                                    <button type="button" class="icon-margin method-actions">
-                                      <i class="glyphicon " ng-class="{'glyphicon-chevron-left': isSelectedMethod(method_call), 'glyphicon-chevron-right': !isSelectedMethod(method_call)}"></i>
-                                    </button>
-                                </div>
-                                  <span class="pull-left method-name">
+                            <span class="input-group-addon cursorMove" dnd-draggable="method_call" dnd-effect-allowed="ove" dnd-moved="selectedTechnique.method_calls.splice($index,1)" ><b>:::</b></span>
+                            <div class="panel-heading form-horizontal" style="overflow:hidden">
+                              <div class="input-group col-xs-12 text-info"  ng-if="method_call.class_context !== 'any'">
+                                <label class="input-xs text-light input-group-addon">Condition:</label>
+                                <input ng-click="$event.stopPropagation();" class="input-xs form-control parameter" ng-readonly="true" ng-model="method_call.class_context"  />
+                                <span class="input-group-addon input-xs">
+                                  <button type="button" ng-click="moveDown($event,$index);" class="icon-margin method-action" ng-class="{disabled : $index === 0}">
+                                    <i class="glyphicon glyphicon-circle-arrow-up"></i>
+                                  </button>
+                                  <button type="button" ng-click="moveUp($event,$index);" class="icon-margin method-action" ng-class="{disabled : $index === selectedTechnique.method_calls.length - 1}">
+                                    <i class="glyphicon glyphicon-circle-arrow-down"></i>
+                                  </button>
+                                  <button type="button" ng-click="removeMethod($index);$event.stopPropagation();" class="icon-margin  method-action">
+                                    <i class="glyphicon glyphicon-remove-sign icon-delete"></i>
+                                  </button>
+                                  <button type="button" class="icon-margin method-action">
+                                    <i class="glyphicon " ng-class="{'glyphicon-chevron-left': isSelectedMethod(method_call), 'glyphicon-chevron-right': !isSelectedMethod(method_call)}"></i>
+                                  </button>
+                                 </span>
+                              </div>
+
+                              <div ng-class="{'small-left-margin': method_call.class_context !== 'any'}">
+                                <h4 class="input-group panel-title">
+                                  <div class="method-name text-left input-group-addon">
                                     {{getMethodName(method_call)}}
                                     <span
                                     class="cursor-help"
@@ -332,31 +338,40 @@
                                       <i class="glyphicon glyphicon-exclamation-sign deprecated-icon"></i>
                                     </span>
                                     <a ng-click="$event.stopPropagation();" target="_blank" ng-href="{{methodUrl(method_call)}}">
-                                      <i class="glyphicon glyphicon-info-sign method-actions"></i>
+                                      <i class="glyphicon glyphicon-info-sign method-action"></i>
                                     </a>
-                                    <i class="dsc-icon" ng-if="checkMethodCallAgentSupport(method_call.method_name,'dsc')"></i>
-                                    <i class="glyphicon glyphicon-cog classic-icon" ng-if="checkMethodCallAgentSupport(method_call.method_name,'cfengine-community')"></i>
-                                  </span>
-                                <br style="clear:both"/>
-                                <small class="pull-left method-margin" >
-                                    {{getMethodDescription(method_call)}}
-                                </small>
-                              </h4>
-                              <br style="clear:both"/>
-                              <div ng-form="arg_method" ng-repeat="parameter in method_call.parameters  track by $index">
-                                <input ng-hide="true" type="text" name="param" ng-model="parameter.value" constraint parameter="parameter" >
-                                <ng-messages ng-if="parameter.$errors.length > 0" for="arg_method.param.$error" multiple>
-                                  <div class="text-danger" ng-message="constraint">
-                                    Invalid constraint for parameter: '{{parameter.name}}'
                                   </div>
-                                </ng-messages>
-                              </div>
-                              <div class="requiredParameters" ng-if="checkMissingParameters(method_call.parameters)">
-                                <span class="glyphicon glyphicon-exclamation-sign"></span>
-                                Required parameters missing
-                              </div>
-                              <div class="pull-left method-param" >
-                                <div ng-if="getClassParameter(method_call)" class="parameter">{{getClassParameter(method_call)}}</div>
+                                  <span class="input-group-addon method-actions"  ng-if="method_call.class_context === 'any'">
+                                    <button type="button" ng-click="moveDown($event,$index);" class="icon-margin method-action" ng-class="{disabled : $index === 0}">
+                                      <i class="glyphicon glyphicon-circle-arrow-up"></i>
+                                    </button>
+                                    <button type="button" ng-click="moveUp($event,$index);" class="icon-margin method-action" ng-class="{disabled : $index === selectedTechnique.method_calls.length - 1}">
+                                      <i class="glyphicon glyphicon-circle-arrow-down"></i>
+                                    </button>
+                                    <button type="button" ng-click="removeMethod($index);$event.stopPropagation();" class="icon-margin  method-action">
+                                      <i class="glyphicon glyphicon-remove-sign icon-delete"></i>
+                                    </button>
+                                    <button type="button" class="icon-margin method-action">
+                                      <i class="glyphicon " ng-class="{'glyphicon-chevron-left': isSelectedMethod(method_call), 'glyphicon-chevron-right': !isSelectedMethod(method_call)}"></i>
+                                    </button>
+                                   </span>
+                                </h4>
+                                <div class="input-group col-xs-12  text-grey">
+                                  <label class="input-xs text-light  input-group-addon text-grey">{{getClassParameter(method_call).name}}:</label>
+                                  <input ng-click="$event.stopPropagation();" ng-if="getClassParameter(method_call).value" class="input-xs form-control parameter" ng-readonly="true" ng-model="getClassParameter(method_call).value" />
+                                </div>
+                                <div ng-form="arg_method" ng-repeat="parameter in method_call.parameters  track by $index">
+                                  <input ng-hide="true" type="text" name="param" ng-model="parameter.value" constraint parameter="parameter" >
+                                  <ng-messages ng-if="parameter.$errors.length > 0" for="arg_method.param.$error" multiple>
+                                    <div class="text-danger" ng-message="constraint">
+                                      Invalid constraint for parameter: '{{parameter.name}}'
+                                    </div>
+                                  </ng-messages>
+                                </div>
+                                <div class="requiredParameters" ng-if="checkMissingParameters(method_call.parameters)">
+                                  <span class="glyphicon glyphicon-exclamation-sign"></span>
+                                  Required parameters missing
+                                </div>
                               </div>
                           </div>
                         </div>
@@ -527,7 +542,7 @@
                           </button>
                           <button class="btn btn-default dsc-filter" ng-class="{active:filter.compatibility == 'dsc'}" ng-click="filter.compatibility='dsc'">
                             DSC
-                            <i class="dsc-icon"></i>
+                            <img src="ncf-builder/css/dsc-icon.svg" class="dsc-icon"></i>
                           </button>
                         </div>
                         <br>
@@ -573,10 +588,10 @@
                                     <i class="glyphicon glyphicon-exclamation-sign deprecated-icon"></i>
                                   </span>
                                   <a ng-click="$event.stopPropagation();" target="_blank" ng-href="{{methodUrl(method)}}">
-                                    <i class="glyphicon glyphicon-info-sign method-actions"></i>
+                                    <i class="glyphicon glyphicon-info-sign method-action"></i>
                                   </a>
                                 </span>
-                                <i class="dsc-icon" ng-if="checkAgentSupport(method,'dsc')"></i>
+                                <img src="ncf-builder/css/dsc-icon.svg" class="dsc-icon" ng-if="checkAgentSupport(method,'dsc')"></i>
                                 <i class="glyphicon glyphicon-cog classic-icon" ng-if="checkAgentSupport(method,'cfengine-community')"></i>
                                 <br style="clear:both"/>
                                 <small class="pull-left method-margin" >
