--- a/builder/index.html
+++ b/builder/index.html
@@ -3,28 +3,34 @@
     <head>
         <link type="image/x-icon" rel="icon" href="ncf-builder/css/favicon.ico"/>
 
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap-3.3.7.min.css" rel="stylesheet">
         <link href="css/ngToast.min.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
         <!-- Needed polyfill for ie11, works in all other browsers -->
         <script src="js/polyfill.js"></script>
-        <script src="js/angular-1.3.14.min.js"></script>
-        <script src="js/angular-messages-1.3.14.min.js"></script>
-        <script src="js/angular-animate.min.js"></script>
-        <script src="js/angular-sanitize.min.js"></script>
-        <script src="js/ngToast.min.js"></script>
+        <script src="js/angular-1.3.20.min.js"></script>
+        <script src="js/angular-messages-1.3.20.min.js"></script>
+        <script src="js/angular-animate-1.3.20.min.js"></script>
+        <script src="js/angular-sanitize-1.3.20.min.js"></script>
+        <script src="js/ngToast-1.4.0.min.js"></script>
         <script src="js/angular-drag-and-drop-lists.min.js"></script>
-        <script src="js/jquery-1.11.1.min.js"></script>
+        <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/elastic.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap-3.3.7.min.js"></script>
         <script src="js/cfengine_classes.js"></script>
         <script src="js/class_utils.js"></script>
-        <script src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
-        <script id="template/accordion/accordion-group.html" type="text/ng-template">
+        <script src="js/ui-bootstrap-tpls-0.14.3.min.js"></script>
+        <script type="text/ng-template" id="deprecatedMethod.html">
+          <div>This generic method is <b>deprecated</b>.</div>
+        </script>
+        <script type="text/ng-template" id="deprecatedCategory.html">
+          All generic methods in this category are <b>deprecated</b>.
+        </script>
+        <script id="template/uib-accordion/uib-accordion-group.html" type="text/ng-template">
           <div class="panel panel-default">
             <div class="panel-heading" ng-click="isOpen = !isOpen">
                 <h4 class="panel-title">
-                  <a class="accordion-toggle"  accordion-transclude="heading">{{heading}}</a>
+                  <a class="uib-accordion-toggle"  uib-accordion-transclude="heading">{{heading}}</a>
                 </h4>
             </div>
             <div class="panel-collapse" collapse="!isOpen">
@@ -161,16 +167,14 @@
                                 <span class="col-md-10">
                                     {{technique.name}}
                                     <span
-                                    class="cursor-help"
-                                    popover
+                                    class="cursor-help"                                    
                                     ng-if="hasDeprecatedMethod(technique)"
-                                    data-original-title="{{technique.name}}"
-                                    data-content="This technique is using at least one <b>deprecated</b> generic method."
+                                    popover-title="{{technique.name}}"
+                                    uib-popover-template="'TechniqueWithDeprecatedMethod.html'"
                                     rel="popover"
-                                    data-placement="bottom"
-                                    data-html="true"
-                                    data-trigger="hover"
-                                    data-container="body">
+                                    popover-placement="bottom"
+                                    popover-trigger="mouseenter"
+                                    popover-append-to-body="body" >
                                       <i class="glyphicon glyphicon-exclamation-sign deprecated-icon"></i>
                                     </span>
                                 </span>
@@ -201,12 +205,12 @@
                         <a ng-disabled="isNotSaved()" class="btn btn-default pull-right top-margin right-margin" ng-click="exportTechnique(selectedTechnique)">Export</a>
                       </div>
                     </h3>
-                    <accordion>
-                        <accordion-group ng-init="isopen = true" is-open="isopen">
-                            <accordion-heading>
+                    <uib-accordion>
+                        <uib-accordion-group ng-init="isopen = true" is-open="isopen">
+                            <uib-accordion-heading>
                                 <i class="glyphicon" ng-class="{'glyphicon-chevron-down': isopen, 'glyphicon-chevron-right': !isopen}"></i>
                                 General information
-                            </accordion-heading>
+                            </uib-accordion-heading>
                             <div class="col-xs-12">
                               <div class="alert alert-info" ng-if="restoreFlag && !conflictFlag">
                                 Technique restored from current session.
@@ -259,14 +263,14 @@
                                 <strong class="col-sm-3 text-right">Version:</strong>
                                 <div class="col-sm-8">{{selectedTechnique.version}}</div>
                             </div>
-                        </accordion-group>
-                    </accordion>
-                    <accordion>
-                        <accordion-group ng-init="parameter_open = true" is-open="parameter_open">
-                          <accordion-heading>
+                        </uib-accordion-group>
+                    </uib-accordion>
+                    <uib-accordion>
+                        <uib-accordion-group ng-init="parameter_open = true" is-open="parameter_open">
+                          <uib-accordion-heading>
                             <i class="glyphicon" ng-class="{'glyphicon-chevron-down': parameter_open, 'glyphicon-chevron-right': !parameter_open}"></i>
                             Parameters
-                          </accordion-heading>
+                          </uib-accordion-heading>
                           <div class="col-sm-12 no-padding-right">
                             <div class="form-group col-sm-12 no-padding-right" ng-repeat="param in selectedTechnique.parameter track by $index">
                               <div class="input-group col-sm-12">
@@ -287,9 +291,9 @@
                               </div>
                             </div>
                           </div>
-                        </accordion-group>
+                        </uib-accordion-group>
 
-                    </accordion>
+                    </uib-accordion>
                     <div style="position: relative"><div ng-if="selectedTechnique.method_calls.length === 0" class="btn btn-block btn-default text-center" id="no-methods" >
                       <div class="panel-heading" style="overflow:hidden">
                         Drag and drop generic methods here from the list on the right to build target configuration for this technique. </div>
@@ -303,7 +307,8 @@
                             <div class="panel-heading form-horizontal" style="overflow:hidden">
                               <div class="input-group col-xs-12 text-info"  ng-if="method_call.class_context !== 'any'">
                                 <label class="input-xs text-light input-group-addon">Condition:</label>
-                                <input ng-click="$event.stopPropagation();" class="input-xs form-control parameter" ng-readonly="true" ng-model="method_call.class_context"  />
+                                <input ng-click="$event.stopPropagation();" class="input-xs form-control parameter" 
+                                       uib-popover-html="'<small>Click <span class=\'text-info\'>3</span> times to copy the whole condition below</small>'" popover-trigger="mouseenter" popover-append-to-body="true" popover-title="{{method_call.class_context}}" ng-readonly="true" ng-model="method_call.class_context"  />
                                 <span class="input-group-addon input-xs">
                                   <button type="button" ng-click="moveDown($event,$index);" class="icon-margin method-action" ng-class="{disabled : $index === 0}">
                                     <i class="glyphicon glyphicon-circle-arrow-up"></i>
@@ -324,17 +329,9 @@
                                 <h4 class="input-group panel-title">
                                   <div class="method-name text-left input-group-addon">
                                     {{getMethodName(method_call)}}
-                                    <span
-                                    class="cursor-help"
-                                    popover
-                                    ng-if="(method_call.deprecated || isDeprecated(method_call.method_name))"
-                                    data-original-title="{{getMethodName(method_call)}}"
-                                    data-content="This generic method is <b>deprecated</b>."
-                                    rel="popover"
-                                    data-placement="bottom"
-                                    data-html="true"
-                                    data-trigger="hover"
-                                    data-container="body">
+                                    <span class="cursor-help" ng-if="(method_call.deprecated || isDeprecated(method_call.method_name))" 
+                                         uib-popover-template="'deprecatedMethod.html'" popover-title="{{getMethodName(method_call)}}" 
+                                         popover-trigger="mouseenter" popover-append-to-body="true">
                                       <i class="glyphicon glyphicon-exclamation-sign deprecated-icon"></i>
                                     </span>
                                     <a ng-click="$event.stopPropagation();" target="_blank" ng-href="{{methodUrl(method_call)}}">
@@ -356,9 +353,9 @@
                                     </button>
                                    </span>
                                 </h4>
-                                <div class="input-group col-xs-12  text-grey">
+                                <div class="input-group col-xs-12 text-grey"  ng-if="getClassParameter(method_call).value">
                                   <label class="input-xs text-light  input-group-addon text-grey">{{getClassParameter(method_call).name}}:</label>
-                                  <input ng-click="$event.stopPropagation();" ng-if="getClassParameter(method_call).value" class="input-xs form-control parameter" ng-readonly="true" ng-model="getClassParameter(method_call).value" />
+                                  <input ng-click="$event.stopPropagation();" class="input-xs form-control parameter" ng-readonly="true" ng-model="getClassParameter(method_call).value" />
                                 </div>
                                 <div ng-form="arg_method" ng-repeat="parameter in method_call.parameters  track by $index">
                                   <input ng-hide="true" type="text" name="param" ng-model="parameter.value" constraint parameter="parameter" >
@@ -394,28 +391,20 @@
                 <div>
                     <div class="title">Method</div>
                     <h3 >{{getMethodName(selectedMethod)}}
-                        <span
-                        class="cursor-help"
-                        popover
-                        ng-if="isDeprecated(selectedMethod.method_name)"
-                        data-original-title="{{getMethodName(selectedMethod)}}"
-                        data-content="This generic method is <b>deprecated</b>."
-                        rel="popover"
-                        data-placement="bottom"
-                        data-html="true"
-                        data-trigger="hover"
-                        data-container="body">
+                        <span class="cursor-help" ng-if="isDeprecated(selectedMethod.method_name)"
+                              popover-title="{{getMethodName(selectedMethod)}}" uib-popover-template="'deprecatedMethod.html'"
+                              popover-placement="bottom" popover-trigger="mouseenter" popover-append-to-body="true">
                           <i class="glyphicon glyphicon-exclamation-sign deprecated-icon"></i>
                         </span>
                         <i class="{{getIconClassByAgentType(selectedMethod.method_name)}}"></i>
                         <button ng-disabled="! canResetMethod()" class="btn btn-default pull-right top-margin" ng-click="resetMethod()">Reset</button>
                     </h3>
-                    <accordion>
-                        <accordion-group is-open="conditionIsOpen">
-                            <accordion-heading>
+                    <uib-accordion>
+                        <uib-accordion-group is-open="conditionIsOpen">
+                            <uib-accordion-heading>
                                 <i class="glyphicon" ng-class="{'glyphicon-chevron-down': conditionIsOpen, 'glyphicon-chevron-right': !conditionIsOpen}"></i>
                                 Conditions
-                            </accordion-heading>
+                            </uib-accordion-heading>
                             <div class="form-group condition-form" id="os-form">
                               <label for="os_class">Operating system:</label>
                               <form class="form-inline" role="form">
@@ -461,14 +450,14 @@
                                   </span>
                                 </div>
                             </form>
-                        </accordion-group>
-                    </accordion>
-                    <accordion >
-                        <accordion-group ng-init="isopen = true" is-open="isopen">
-                            <accordion-heading>
+                        </uib-accordion-group>
+                    </uib-accordion>
+                    <uib-accordion >
+                        <uib-accordion-group ng-init="isopen = true" is-open="isopen">
+                            <uib-accordion-heading>
                                 <i class="glyphicon" ng-class="{'glyphicon-chevron-down': isopen, 'glyphicon-chevron-right': !isopen}"></i>
                                 Parameters
-                            </accordion-heading>
+                            </uib-accordion-heading>
                             <div class="form-group method-parameter" show-errors ng-form="subForm" style="margin: 15px 10px" ng-repeat="parameter in selectedMethod.parameters track by $index" ng-model-options="{ updateOn: 'default blur', debounce: { default: 250, blur: 0 } }" >
                               <ng-form name="paramForm" role="form">
                                 <label for="param-{{$index}}">
@@ -486,8 +475,8 @@
                                 </ul>
                               </ng-form>
                             </div>
-                        </accordion-group>
-                    </accordion>
+                        </uib-accordion-group>
+                    </uib-accordion>
                 </div>
                 <div class="col-md-5 fixed-footer" style="padding-top: 0; border-right:0; padding-bottom: 0;">
                     <h4 style="text-align:left; margin-top:0px;" class="panel-title">
@@ -575,16 +564,9 @@
                         <div class="panel-heading" style="overflow:hidden">
                             <h4 class="panel-title">
                                 <span class="pull-left"> {{method.name}}
-                                  <span
-                                  class="cursor-help"
-                                  popover
-                                  ng-if="method.deprecated"
-                                  data-original-title="{{method.name}}"
-                                  data-content="This generic method is <b>deprecated</b>."
-                                  rel="popover" data-placement="bottom"
-                                  data-html="true"
-                                  data-trigger="hover"
-                                  data-container="body">
+                                  <span class="cursor-help" ng-if="method.deprecated"
+                                        popover-title="{{method.name}}" uib-popover-template="'deprecatedMethod.html'"
+                                        popover-placement="bottom" popover-trigger="mouseenter" popover-append-to-body="true">
                                     <i class="glyphicon glyphicon-exclamation-sign deprecated-icon"></i>
                                   </span>
                                   <a ng-click="$event.stopPropagation();" target="_blank" ng-href="{{methodUrl(method)}}">
@@ -611,15 +593,13 @@
                           {{capitaliseFirstLetter(kind)}}
                           <span
                           class="cursor-help"
-                          popover
                           ng-if="!checkDeprecatedFilter(methods)"
-                          data-original-title="{{capitaliseFirstLetter(kind)}}"
-                          data-content="All generic methods in this category are <b>deprecated</b>."
-                          rel="popover"
-                          data-placement="bottom"
-                          data-html="true"
-                          data-trigger="hover"
-                          data-container="body">
+                          popover-title="{{capitaliseFirstLetter(kind)}}"
+                          uib-popover-template="'deprecatedCategory.html'"
+                          popover-placement="bottom"
+                          popover-trigger="hover"
+                          popover-append-to-body="true"
+                          >
                             <i class="glyphicon glyphicon-exclamation-sign deprecated-icon"></i>
                           </span>
                         </a>
