--- a/builder/index.html
+++ b/builder/index.html
@@ -3,23 +3,23 @@
     <head>
         <link type="image/x-icon" rel="icon" href="ncf-builder/css/favicon.ico"/>
 
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/ngToast.min.css" rel="stylesheet">
-        <link href="css/custom.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css?version=dev" rel="stylesheet">
+        <link href="css/ngToast.min.css?version=dev" rel="stylesheet">
+        <link href="css/custom.css?version=dev" rel="stylesheet">
         <!-- Needed polyfill for ie11, works in all other browsers -->
-        <script src="js/startswith.js"></script>
-        <script src="js/angular-1.3.14.min.js"></script>
-        <script src="js/angular-messages-1.3.14.min.js"></script>
-        <script src="js/angular-animate.min.js"></script>
-        <script src="js/angular-sanitize.min.js"></script>
-        <script src="js/ngToast.min.js"></script>
-        <script src="js/angular-drag-and-drop-lists.min.js"></script>
-        <script src="js/jquery-1.11.1.min.js"></script>
-        <script src="js/elastic.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/cfengine_classes.js"></script>
-        <script src="js/class_utils.js"></script>
-        <script src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
+        <script src="js/startswith.js?version=dev"></script>
+        <script src="js/angular-1.3.14.min.js?version=dev"></script>
+        <script src="js/angular-messages-1.3.14.min.js?version=dev"></script>
+        <script src="js/angular-animate.min.js?version=dev"></script>
+        <script src="js/angular-sanitize.min.js?version=dev"></script>
+        <script src="js/ngToast.min.js?version=dev"></script>
+        <script src="js/angular-drag-and-drop-lists.min.js?version=dev"></script>
+        <script src="js/jquery-1.11.1.min.js?version=dev"></script>
+        <script src="js/elastic.min.js?version=dev"></script>
+        <script src="js/bootstrap.min.js?version=dev"></script>
+        <script src="js/cfengine_classes.js?version=dev"></script>
+        <script src="js/class_utils.js?version=dev"></script>
+        <script src="js/ui-bootstrap-tpls-0.11.0.min.js?version=dev"></script>
         <script id="template/accordion/accordion-group.html" type="text/ng-template">
           <div class="panel panel-default">
             <div class="panel-heading" ng-click="isOpen = !isOpen">
@@ -95,7 +95,7 @@
             </div>
           </form >
         </script>
-        <script src="js/ncf.js" ></script>
+        <script src="js/ncf.js?version=dev" ></script>
         <script type="text/javascript">
           ($(function() {
             if (window.self != window.top) {
