Fixes #14212: In technique editor, ncf index is cached which defeats #14194 correction on migration

--- a/rudder-web/src/main/webapp/secure/utilities/techniqueEditor.html
+++ b/rudder-web/src/main/webapp/secure/utilities/techniqueEditor.html
@@ -12,7 +12,7 @@
   <div class="portlet">
     <div class="portlet-content">
       <div class="inner-portlet">
-        <iframe id="editor-iframe" src="/ncf-builder/#!?path=/var/rudder/configuration-repository/ncf"></iframe>
+        <iframe id="editor-iframe" data-lift="with-cached-resource" src="/ncf-builder/#!?path=/var/rudder/configuration-repository/ncf"></iframe>
       </div>
     </div>
     <br/>
